<resources>
    <string name="app_name">TeraUlang</string>
    <string name="upt_metrologi_kota_cirebon">UPT METROLOGI KOTA CIREBON</string>
    <string name="todo">todo</string>
    <string name="srn_drawer_open">Open</string>
    <string name="tera_mobile">TERA MOBILE</string>
    <string name="tera_mobile2">Mobile</string>
    <string name="NIP">Nomor Induk Pegawai</string>
    <string name="password">Password</string>
    <string name="nama">Nama</string>
    <string name="masuk">MASUK</string>
    <string name="tera_ulang_mobile">Tera Ulang Mobile</string>
    <string name="selamat_datang">Selamat Datang,</string>
    <string name="fuji_sulaeman">Fuji Sulaeman</string>
    <string name="rekam_data_tera_ulang">Rekam Data Tera Ulang</string>
    <string name="data_tera_ulang">Data Tera Ulang</string>
    <string name="monitoring_tera">Monitoring Tera</string>
    <string name="e_cerapan">E-Cerapan</string>
    <string name="input_tera_ulang">Input Tera Ulang</string>
    <string name="nama_pemilik">Nama Pemilik</string>
    <string name="alamat">Alamat</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="no_hp">No. Hp</string>
    <string name="jenis_timbangan">Jenis UTTP</string>
    <string name="kapasitas">Kapasitas</string>
    <string name="kg">Kg</string>
    <string name="anak_timbangan">Anak Timbangan</string>
    <string name="gram">Gram</string>
    <string name="biaya">Biaya</string>
    <string name="tanggal_tera_ulang">Tanggal Tera Ulang</string>
    <string name="submit">Submit</string>
    <string name="dinas">Dinas Perdagangan, Koperasi, Usaha Kecil dan Menengah Kota Cirebon</string>
    <string name="dash">--</string>
    <string name="tanggal_tera_ulang_berikutnya">Tanggal Tera Ulang Berikutnya</string>
    <string name="textview">TextView</string>
    <string name="l">L/min</string>
    <string name="cm">Cm</string>
    <string name="m3_h">m3/h</string>
    <string name="m">m</string>
    <string name="pilih_alamat">Pilih Alamat</string>
    <string name="kelurahan">Kelurahan</string>
    <string name="timbangan">Jenis UTTP</string>
    <string name="retribusi">Retribusi</string>
    <string name="data_grafik">Data Grafik</string>
    <string name="data_tabel">Data Tabel</string>
    <string name="tera_ulang_data">Tera Ulang Data</string>
    <string name="pilih_tahun_tera_ulang">Pilih Tahun Tera Ulang</string>
    <string name="empty">empty</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="ingat_saya">Ingat Saya</string>
    <string name="export_data">Export Data</string>

    <string-array name="Alamat">
        <item>Pasar Pagi</item>
        <item>Pasar Jagasatru</item>
        <item>Pasar Kanoman</item>
        <item>Pasar Gunungsari</item>
        <item>Pasar Harjamukti</item>
        <item>Pasar Kramat</item>
        <item>Pasar Perumnas</item>
        <item>Pasar Balinza</item>
        <item>Pasar Drajat</item>
        <item>Pasar Pronggol</item>
        <item>Lain-Lain</item>
    </string-array>

    <string-array name="JenisTimbangan">
        <item>Pilih Jenis UTTP</item>
        <item>Timbangan Meja</item>
        <item>Timbangan Sentisimal</item>
        <item>Timbangan Pegas</item>
        <item>Timbangan Elektronik</item>
        <item>Timbangan Dacin Logam</item>
        <item>Timbangan Jembatan</item>
        <item>Timbangan Bobot Ingsut</item>
        <item>Neraca Emas - Obat</item>
        <item>PU BBM</item>
        <item>Meter Air</item>
        <item>Meter Gas</item>
        <item>Lain-Lain</item>
    </string-array>

    <string-array name="PilihTahun">
        <item>Pilih Tahun</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
    </string-array>

    <string name="keluar">Keluar</string>
    <string name="srn_drawer_close">Close</string>

    <string name="srn_ex_no_menu_view">No view for menu provided. You must either call .withMenuView(View) or pass a valid resource id to .withMenuLayout(int)</string>
    <string name="srn_ex_bad_content_view">Your content view must contain exactly one child. Make sure you call inject() after setContentView().</string>
    <string name="next">Next</string>
    <string name="quantity">Quantity</string>
    <string name="testing">Testing</string>
    <string name="tera_ulang_kedua">Nama Pemilik</string>
    <string name="tanggaltera">03-08-2021</string>
    <string name="tera_ulang">Tera Ulang</string>
    <string name="alamat_pemilik">Alamat Pemilik</string>
    <string name="no_hp_pemilik">No Hp Pemilik</string>
    <string name="jenis_timbangan_pemilik">Jenis Timbangan Pemilik</string>
    <string name="quantity_timbangan">Quantity</string>
    <string name="anak_timbangan_pemilik">Anak Timbangan</string>
    <string name="test">:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total">Total</string>
    <string name="total_retribusi">Total Retribusi</string>
</resources>