<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/template"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#9C253C02"
        android:layout_marginBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/header_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#DEAD00"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Label_TeraUlang2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/tera_ulang"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/tanggalteraulangbrkt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header_detail"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/tanggaltera"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/namapemilikdetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tanggalteraulangbrkt"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/tera_ulang_kedua"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/alamatdetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/namapemilikdetail"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/alamat_pemilik"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/NoHpDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/alamatdetail"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/no_hp_pemilik"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/JenisTimbanganDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/NoHpDetail"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/jenis_timbangan_pemilik"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/JenisTimbanganDetail2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/NoHpDetail"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:layout_toStartOf="@+id/QuantityDetail"
            android:layout_toLeftOf="@+id/QuantityDetail"
            android:text="@string/test"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginRight="16dp" />

        <TextView
            android:id="@+id/QuantityDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/NoHpDetail"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/quantity_timbangan"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/AnakTimbanganDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/JenisTimbanganDetail"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/anak_timbangan_pemilik"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/AnakTimbanganDetail2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/JenisTimbanganDetail2"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:layout_toStartOf="@+id/AnakTimbanganQuantity"
            android:layout_toLeftOf="@+id/QuantityDetail"
            android:text="@string/test"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginRight="16dp" />

        <TextView
            android:id="@+id/AnakTimbanganQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/QuantityDetail"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/quantity_timbangan"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>