<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.CenteredTextFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".Dashboard">

        <TextView
            android:id="@+id/judulapps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/baloo"
            android:text="@string/tera_ulang_mobile"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/welcomemessage"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcomemessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/basic"
            android:text="@string/selamat_datang"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
            app:layout_constraintEnd_toEndOf="@+id/judulapps"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/judulapps"
            app:layout_constraintTop_toBottomOf="@+id/judulapps"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/namapengguna"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:fontFamily="@font/basic"
            android:text="@string/fuji_sulaeman"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/judulapps"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/welcomemessage"
            app:layout_constraintTop_toBottomOf="@+id/judulapps"
            app:layout_constraintVertical_bias="0.0" />

        <LinearLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            android:clickable="true"
            android:background="@drawable/ripple_menu"
            app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomemessage"
            android:focusable="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_gravity="center"
                android:clickable="false"
                android:background="@drawable/pensil_vector"
                android:contentDescription="@string/todo"
                android:layout_marginLeft="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:textAlignment="center"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="@string/rekam_data_tera_ulang"
                android:textColor="@color/white"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            android:clickable="true"
            android:background="@drawable/ripple_menu"
            app:layout_constraintBottom_toTopOf="@+id/relativeLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
            android:focusable="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_gravity="center"
                android:background="@drawable/balance_icon"
                android:contentDescription="@string/todo"
                android:layout_marginLeft="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="@string/data_tera_ulang"
                android:textColor="@color/white"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/relativeLayout3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            android:clickable="true"
            android:background="@drawable/ripple_menu"
            app:layout_constraintBottom_toTopOf="@+id/relativeLayout4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
            android:focusable="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_gravity="center"
                android:background="@drawable/monitoring_icon"
                android:contentDescription="@string/todo"
                android:layout_marginLeft="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="@string/monitoring_tera"
                android:textColor="@color/white"
                android:textSize="20sp"/>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/ripple_menu"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout3">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:background="@drawable/ecerapan_logo"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:text="@string/e_cerapan"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/coming_soon"
                android:contentDescription="@string/todo" />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>